[gd_scene load_steps=12 format=3 uid="uid://dpr6mnd7ukuya"]

[ext_resource type="Script" uid="uid://dj6spr03iv5iq" path="res://scenes/game_scene/levels/basic_test_scene.gd" id="1_3ygac"]
[ext_resource type="Texture2D" uid="uid://d2a26soib85fm" path="res://assets/Artworks/Hokm tVG Main Menu Background.png" id="2_f4grl"]
[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_game_template/base/nodes/utilities/pause_menu_controller.gd" id="3_exaxi"]
[ext_resource type="PackedScene" uid="uid://b0x8acab1b4oe" path="res://scenes/windows/pause_menu.tscn" id="4_b2thp"]
[ext_resource type="Script" uid="uid://dxbgl3telxva0" path="res://resources/Hand/hand.gd" id="5_m6rcj"]
[ext_resource type="PackedScene" uid="uid://cw2s6n4ya0dat" path="res://resources/Deck/Deck.tscn" id="5_m14oq"]
[ext_resource type="PackedScene" uid="uid://byqpo4bmpwdyh" path="res://resources/UI Elements/hokm_display_panel.tscn" id="6_f4grl"]
[ext_resource type="Texture2D" uid="uid://mdddrsbhdtq2" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (medium)/card_clubs_suit.png" id="7_exaxi"]
[ext_resource type="Texture2D" uid="uid://cchmw36cn2iub" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (medium)/card_hearts_suit.png" id="8_sl5y5"]
[ext_resource type="Texture2D" uid="uid://kbvpimiey1to" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (medium)/card_spades_suit.png" id="9_m6rcj"]
[ext_resource type="Texture2D" uid="uid://nphn56k8tao0" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (medium)/card_diamonds_suit.png" id="10_xf0qg"]

[node name="BasicHokmTutorial1" type="Node2D"]
script = ExtResource("1_3ygac")

[node name="Background" type="TextureRect" parent="."]
offset_left = -656.0
offset_top = -376.0
offset_right = 656.0
offset_bottom = 376.0
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("2_f4grl")
expand_mode = 1

[node name="Hand Board (breaks cards)" type="ColorRect" parent="."]
visible = false
visibility_layer = 512
offset_left = -352.0
offset_top = 179.0
offset_right = 352.0
offset_bottom = 363.0
mouse_filter = 2
color = Color(0.17254902, 0.13725491, 0.13725491, 1)

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("3_exaxi")
pause_menu_packed = ExtResource("4_b2thp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Deck" parent="." node_paths=PackedStringArray("Hand") instance=ExtResource("5_m14oq")]
position = Vector2(-512, -16)
Hand = NodePath("../Hand")

[node name="Hand" type="Node2D" parent="."]
position = Vector2(0, 224)
script = ExtResource("5_m6rcj")

[node name="Button" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -549.0
offset_top = 82.928
offset_right = -472.0
offset_bottom = 141.92801
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Draw
"

[node name="Hokm Display Panel" parent="." instance=ExtResource("6_f4grl")]
visible = false
offset_left = -576.0
offset_right = -440.0

[node name="Clubs" type="Button" parent="."]
offset_left = -191.99997
offset_top = -127.99998
offset_right = -135.99997
offset_bottom = -71.99997
scale = Vector2(1.680001, 1.7999998)
icon = ExtResource("7_exaxi")

[node name="Hearts" type="Button" parent="."]
offset_left = -95.99998
offset_top = -127.99999
offset_right = -39.99997
offset_bottom = -71.99999
scale = Vector2(1.680001, 1.7999998)
icon = ExtResource("8_sl5y5")
expand_icon = true

[node name="Spades" type="Button" parent="."]
offset_left = 3.0517578e-05
offset_top = -127.99999
offset_right = 56.00003
offset_bottom = -71.99999
scale = Vector2(1.680001, 1.7999998)
icon = ExtResource("9_m6rcj")

[node name="Diamonds" type="Button" parent="."]
offset_left = 94.00003
offset_top = -127.99999
offset_right = 150.00003
offset_bottom = -71.99999
scale = Vector2(1.680001, 1.7999998)
icon = ExtResource("10_xf0qg")

[connection signal="hokm_chosen" from="." to="Hokm Display Panel" method="_on_hokm_chosen"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Clubs" to="." method="_on_clubs_pressed"]
[connection signal="pressed" from="Hearts" to="." method="_on_hearts_pressed"]
[connection signal="pressed" from="Spades" to="." method="_on_spades_pressed"]
[connection signal="pressed" from="Diamonds" to="." method="_on_diamonds_pressed"]
